@@ -42,7 +42,6 @@ email                :
 #include <kdirlister.h>
 #include <kfile.h>
 #include <kfiledialog.h>
-#include <kfileitem.h>
 #include <kglobalaccel.h>
 #include <klineedit.h>
 #include <klocale.h>
@@ -615,10 +614,11 @@ void PlayerApp::saveConfig()
     m_pConfig->writeEntry( "Undo Levels", m_optUndoLevels );
     m_pConfig->writeEntry( "Software Mixer Only", m_optSoftwareMixerOnly );
     m_pConfig->writeEntry( "Current Analyzer", m_optVisCurrent );
+    m_pConfig->writeEntry( "Browser Sorting Spec", m_optBrowserSortSpec );
 
     // Write playlist columns layout
     m_pBrowserWin->m_pPlaylistWidget->saveLayout(m_pConfig, "PlaylistColumnsLayout");
-    
+
     //store current item
     PlaylistItem *item = static_cast<PlaylistItem*>( m_pBrowserWin->m_pPlaylistWidget->currentTrack() );
     if ( item != NULL )
@@ -688,6 +688,8 @@ void PlayerApp::readConfig()
     m_optVisCurrent = m_pConfig->readUnsignedNumEntry( "Current Analyzer", 0 );
     m_pPlayerWidget->createVis();
 
+    m_optBrowserSortSpec = m_pConfig->readNumEntry( "Browser Sorting Spec", QDir::Name | QDir::DirsFirst );
+
     m_Volume = m_pConfig->readNumEntry( "Master Volume", 50 );
     slotVolumeChanged( m_Volume );
     m_pPlayerWidget->m_pSliderVol->setValue( m_Volume );
@@ -717,7 +719,7 @@ void PlayerApp::readConfig()
 
     // Read playlist columns layout
     m_pBrowserWin->m_pPlaylistWidget->restoreLayout(m_pConfig, "PlaylistColumnsLayout");
-    
+
     KURL currentlyPlaying = m_pConfig->readEntry( "CurrentSelection" );
 
     kdDebug(DA_COMMON) << "Attempting to select: " << currentlyPlaying.path() << endl;
