@@ -2,6 +2,9 @@ amaroK Changelog
 ==================
 (c) 2002, 2003 by Mark Kretschmann and the amaroK team. GPL License.
 
+
+  * fix: when dropping tracks to PL, order will stay the same as in FileBrowser
+  * add: FileBrowser sortable by clicking on header
   * add: analyzer that distorts a bitmap
   * add: multiple analyzers now possible
   * add: "Software Mixer Only" option
